<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    app:behavior_peekHeight="0dp"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_default"
        android:layout_marginEnd="@dimen/dimen_default"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dimen_default_medium"
        android:paddingBottom="@dimen/dimen_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="@dimen/toolbar_button_dimen"
            android:layout_height="@dimen/toolbar_button_dimen"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:scaleType="centerInside"
            android:src="@drawable/ic_back" />

        <EditText
            android:id="@+id/search_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_default"
            android:layout_marginEnd="@dimen/dimen_default"
            android:layout_weight="1"
            android:autofillHints="@null"
            android:background="@drawable/rounded_search_background"
            android:fontFamily="@font/dm_sans_regular"
            android:gravity="center"
            android:hint="@string/search_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:padding="5dp"
            android:textColorHint="@color/secondary_grey_color" />

        <TextView
            android:id="@+id/cart_button"
            android:layout_width="@dimen/toolbar_button_dimen"
            android:layout_height="@dimen/toolbar_button_dimen"
            android:layout_gravity="center"
            android:background="@drawable/custom_cart" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/main_toolbar"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_color">

            <ImageView
                android:id="@+id/details_image"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:src="@drawable/stock"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dimen_default"
                android:layout_marginTop="@dimen/dimen_default_big"
                android:fontFamily="@font/dm_serif_display_regular"
                android:text="@string/txt_product_name"
                android:textColor="@color/black_color"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_image" />

            <TextView
                android:id="@+id/product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dimen_default"
                android:fontFamily="@font/dm_sans_regular"
                android:text="@string/txt_product_details"
                android:textColor="@color/black_color"
                android:textSize="@dimen/medium_text_size"
                app:layout_constraintTop_toBottomOf="@+id/product_name" />

            <Button
                android:id="@+id/product_buy_button"
                style="@style/HoverEffect"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dimen_default"
                android:layout_marginTop="@dimen/dimen_default_big"
                android:layout_marginEnd="@dimen/dimen_default"
                android:layout_marginBottom="@dimen/dimen_default"
                android:background="@drawable/rounded_black_button_background"
                android:fontFamily="@font/dm_sans_bold"
                android:gravity="center"
                android:text="@string/txt_details_button"
                android:textAllCaps="false"
                android:textColor="@color/white_color"
                android:textSize="@dimen/medium_text_size"
                app:layout_constraintTop_toBottomOf="@+id/product_description" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>
